# py-file-search

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
py_file_search/: __init__.py  core.py
tests/: test_py_file_search.py
